# ComfyUI-Gemini-3

./: README.md  README_CN.md  __init__.py  config.json.example  gemini_client.py  nodes.py  nodes_advanced.py  nodes_cache_batch.py  nodes_image_editing.py  nodes_multimodal.py  nodes_streaming.py  nodes_tools.py  pyproject.toml  requirements.txt
example_workflows/: 01_basic_text_generation.json  02_image_analysis.json  03_function_calling.json  04_structured_output.json  05_chat.json  06_context_caching.json  07_batch_processing.json  08_streaming_generation.json  09_google_search.json  10_code_execution.json  11_safety_settings.json  12_multimodal_analysis.json  13_gemini_image_editor_workflow.json
